style.css
body {
    height: 100vh;
    margin: 0;
    font-family: Roboto, sans-serif;
    display: flex;
    flex-direction: column;
    text-align: center;
}

.header,
.footer {
    background: #1F2937;
    display: flex;
}

.footer {
    color: #eee;
    align-items: center;
    justify-content: center;
    padding: 40px;
  }

.header {
    justify-content: space-evenly;
    align-items: center;
    padding: 16px;
}

.header-logo-text {
    font-size: 24px;
    color: #F9FAF8;
    font-weight: bold;
}

.right-links {
    font-size: 18px;
    font-weight: 100;
    gap: 18px;
}

a {
    text-decoration: none;
    color: #E5E7EB;
}

ul {
    display: flex;
    list-style: none;
    margin: 0;
    padding: 0;
  }

.hero {
    background: #1F2937;
    color: #F9FAF8;
    display: flex;
    text-align: start;
    align-items: center;
    justify-content: space-evenly;
    padding: 20px;
}

.hero-main-text {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 800;
    overflow-wrap: break-word;
    width: 400px;
}

.hero-subtext {
    overflow-wrap: break-word;
    width: 400px;
    font-weight: 300;
}

button {
    cursor: pointer;
    padding: 6px 24px;
    border-radius: 8px;
  }

button.hero-button {
    background: #3882F6;
    border: 1px solid #3882F6;
    color: white;
  }

h1.information {
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
    padding-top: 30px;
}
.information {
    display: flex;
    justify-content: center;
    gap: 52px;
    height: 100vh;
    margin-bottom: 100px;
}

.information img {
    width: 100px;
    height: 100px;
}

.plants {
    max-width: 200px;
}

.testimonial {
    background: #E5E7EB;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
}

.quote {
    font-size: 36px;
    font-weight: lighter;
    font-style: italic;
    text-align: left;
    overflow-wrap: break-word;
    max-width: 800px;
    padding-top: 80px;
    padding-bottom: 20px;
}

.quote-sayer {
    font-weight: bold;
    text-align: right;
    padding-left: 500px;
    padding-bottom: 80px;
}

.call-to-action {
    display: flex;
    justify-content: center;
    align-items: center;
}

.modal {
    background: #3882F6;
    color: #F9FAF8;
    width: 900px;
    border-radius: 8px;
    display: flex;
    gap: 16px;
    padding: 16px;
    margin:80px;
    justify-content: center;
    align-items: center;
}

.header-call,
.call-text {
    text-align: left;
}

.header-call {
    font-weight: bolder;
}

.call-text {
    font-weight: lighter;
}

